--- a/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
+++ b/dune/Hydrate-DG/BM_phasechange_0d/inputs/sample.ini
@@ -29,8 +29,8 @@ max_newton_steps=8
 min_newton_steps=4
 
 [output]
-path_name=/home/amir/dune-2.7/Hydrate-DG/dune/Hydrate-DG/BM_phasechange_0d/
-file_name=test4
+path_name=/home/peiravim/dune-2.7/Hydrate-DG/dune/Hydrate-DG/BM_phasechange_0d/
+file_name=test7
 time_interval=3600
 
 
@@ -58,7 +58,7 @@ XC=0.0055
 T=4.
 
 [hydrate_phase_change]
-dissociation_rate = 1.e-14
+dissociation_rate = 1.15e-14
 formation_rate = 1.e-13
 
 [boundary]
@@ -83,7 +83,7 @@ beta=1.
 dt_initial=0.01
 time_end=10
 hydrate_formation_rate=2.e-13
-hydrate_dissociation_rate=1.e-14
+hydrate_dissociation_rate=1.15e-14
 salinity=0.025
 porosity=0.5
 abs_permeability=1e-15
