--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,65 +1,70 @@
 [grid]
 worlddim=2
-LX=100.
-NX=51
-LZ=-610.
-NZ=303
+LX=10.
+NX=5
+LZ=-500.
+NZ=250
 
 [grid.alugrid]
-name=grid-Ex2-Finer-equi.msh
-LX=100.
-LZ=-610.
+name=grid-10-500.msh
+LX=10.
+LZ=-500.
 
 [grid.ug]
 name=grid.msh
-LX=100.
-LZ=-610.
+LX=10.
+LZ=-500.
 
 [grid.lens]
-Xmin=48
+Xmin=.1
 Zmin=-400
-Xmax=52
+Xmax=.15
 Zmax=0.
 
 [grid.ghsz]
-Ztop=-400.
-Zbottom=-480.
+Ztop=-320.
+Zbottom=-400.
 Xleft=0.
-Xright=100.
+Xright=10.
 
 # time should be in years
 [time]
-dt_initial=1.e-1 #     3.1536e7
-time_end=300000 # 9.4608e12 # just needed to change the time_end 
-T_end =300000 # 9.4608e12#3.1536e7
+dt_initial= 1.e-2#     3.1104e7
+time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
+T_end =3.e5 # 9.4608e12#3.1536e7
 
 [adaptive_time_control]
 flag=true
-dt_min=1.e-9
+dt_min=1.e-7
 dt_max=1.e0 # 3.1536e9
-max_newton_steps=6
+max_newton_steps=8
 min_newton_steps=4
 
 [output]
-path_name=/home/amir/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test1
-time_interval=1 # 3153600000
+path_name=/home/peiravim/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
+file_name=test5
+time_interval=1.e0 # 3153600000
 
 
 # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-max_iterations=10
+max_iterations=12
 abs_error=1.e-7
 reassemble_treshhold = 0.0 # always reassemble J
 verbosity = 2 # be verbose
-reduction = 1.e-6 # total reduction
+reduction = 1.e0 # total reduction
 min_linear_reduction = 1.e-9 # min. red. in linear solve
-max_linear_iteration = 100  
-line_search_strategy = hackbuschReusken # noLineSearch
+max_linear_iteration = 10  
+line_search_strategy = hackbuschReusken #noLineSearch # 
 force_iterations = true
+MaxIterations = 12 
+ForceIteration = true
 
 [newton.line_search]
-line_search_max_iterations = 100 # limit linea search iterations
+line_search_max_iterations = 10 # limit linea search iterations
+MaxIterations = 10 
+DampingFactor = 0.5
+AcceptBest = false
 
 
 [hydrate_phase_change]
@@ -73,7 +78,7 @@ Sh=0.0
 YH2O=0.00051219
 XCH4=0.0
 XC=0.0055
-T=4.
+T=4.6
 
 
 [grad]
@@ -83,22 +88,22 @@ gradTx = 0.
 gradTz = 0.035 # C/m
 
 [sediment]
-number_of_materials=2
+number_of_materials=1
 number_of_layers=1
 
 [sediment.material0]
 por=0.5
-K=1.e-16
+K=1.e-15
 pentry=50000.
 lambda=1.2
 swr=0.
 sgr=0.
-m=3.
+m=1.
 beta=1.
 
 [sediment.material1]
-por=0.3
-K=1.e-12
+por=0.5
+K=1.e-15
 pentry=50000.
 lambda=1.2
 swr=0.
@@ -106,31 +111,6 @@ sgr=0.
 m=3.
 beta=1.
 
-[sediment.layer0]
-z=0.
-porosity=0.3
-abs_permeability=1.e-15
-entry_pressure=5.e4
-lambda=1.2
-swr=0.
-sgr=0.
-m=3
-beta=1.
-
-[initial_problem]
-dt_initial=0.0001
-time_end=11
-hydrate_formation_rate=1e-17
-hydrate_dissociation_rate=0
-salinity=0.025
-porosity=0.3
-abs_permeability=1e-15
-entry_pressure=5.e4
-lambda=1.2
-swr=0
-sgr=0
-m=3
-beta=1
 
 [reference_state]
 salinity=0.
