--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,30 +1,83 @@
 [grid]
-worlddim=1
-LX=200.
-NX=30
+worlddim=2
+LX=500.
+NX=70
 LZ=-500.
-NZ=500
+NZ=250
 name=gridinclined.msh
 
-[grid.lenz]
+#; case [0,400]*[-600,0]
+[grid.lenz1]
+Xmin=100.
+Zmin=-400
+Xmax=400.
+Zmax=-110.
+X0=100.
+X1=400.
+
+[grid.lenz2]
+Xmin=100.
+Zmin=-400
+Xmax=400.
+Zmax=-150.
+X0=100.
+X1=400.
+
+[grid.lenz3]
+Xmin=100.
+Zmin=-400
+Xmax=300.
+Zmax=-210.
+X0=100.
+X1=300.
+
+#; case [0,250]*[-600,0]
+#[grid.lenz1]
+#Xmin=100.
+#Zmin=-450
+#Xmax=200.
+#Zmax=-420.
+#X0=100.
+#X1=200.
+
+#[grid.lenz2]
+#Xmin=50.
+#Zmin=-250
+#Xmax=150.
+#Zmax=-220.
+#X0=50.
+#X1=150.
+
+
+[grid.fgp]
 Xmin=0.
-Zmin=-320
-Xmax=3.
-Zmax=-270.
-X0=0
-X1=200
+Zmin=-580
+Xmax=400.
+Zmax=-540.
 
 [grid.ghsz]
-Ztop=-320.
-Zbottom=-400.
+Ztop=-380.
+Zbottom=-460.
 Xleft=0.
-Xright=200
+Xright=400
 
 ; # time should be in years
 [time]
-dt_initial= 1.e-1#     3.1104e7
+dt_initial= 1.e0 #     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
+
+
+[penalty_coeff]
+Pw = 1.e0
+Sg = 1.e0
+Sh = 1.e0
+T = 1.e0
+XC = 1.e0
+YH2O = 1.e0
+
+[quadrature]
+order = 6
 
 [adaptive_time_control]
 flag=true
@@ -35,16 +88,16 @@ min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test5
-time_interval=1.e0 # 3153600000
+file_name=test-2D-q1-500-500-5
+time_interval=1.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
 AbsoluteLimit = 1.e-6
-Reduction = 1.e-6 # total reduction
+Reduction = 1.e-3 # total reduction
 MinLinearReduction = 1.e-9 # min. red. in linear solve
-MaxLinearIteration = 10  
+MaxLinearIteration = 10 
 LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken #  boundedNoLineSearch #  
 MaxIterations = 10 
 ForceIteration = true
@@ -71,13 +124,13 @@ dissociation_rate=1.e-17
 formation_rate=1.e-17
 
 [initial]
-Sg=0.0
+Sg=0.
 Pw=15.e6
 Sh=0.0
 YH2O=0.00051219
-XCH4=0.0
+XCH4=0.
 XC=0.0096
-T=4.
+T=2.3
 
 
 [grad]
@@ -87,10 +140,12 @@ gradTx = 0.
 gradTz = 0.035 # C/m
 
 [permeability]
-rotation = 5
+rotation1 = 60
+rotation2 = 0
+rotation3 = -81
 
 [sediment]
-number_of_materials=1
+number_of_materials=2
 number_of_layers=1
 
 [sediment.material0]
@@ -100,19 +155,39 @@ pentry=50000.
 lambda=1.2
 swr=0.
 sgr=0.
-m=1.
+m=1
 beta=1.
 
 [sediment.material1]
-por=0.5
-K=1.e-14
+por=0.8
+K=1.e-13
 pentry=50000.
 lambda=1.2
 swr=0.
 sgr=0.
-m=1.
+m=1
 beta=1.
 
+
+[sediment.material2]
+por=0.8
+K=1.e-13
+pentry=50000.
+lambda=1.2
+swr=0.
+sgr=0.
+m=1
+beta=1.
+
+[sediment.material3]
+por=0.8
+K=1.e-14
+pentry=100000.
+lambda=1.2
+swr=0.
+sgr=0.
+m=3
+beta=1.
 
 [reference_state]
 salinity=0.
