--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -3,7 +3,7 @@ worlddim=2
 LX=400.
 NX=40
 LZ=-500.
-NZ=300
+NZ=250
 name=gridinclined.msh
 
 #; case [0,400]*[-600,0]
@@ -88,13 +88,13 @@ min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test-2D-q1-500-500-8
+file_name=test-2D-q1-500-500-9
 time_interval=5.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
-AbsoluteLimit = 1.e-6
+AbsoluteLimit = 1.e-4
 Reduction = 1.e-3 # total reduction
 MinLinearReduction = 1.e-6 # min. red. in linear solve
 MaxLinearIteration = 10
@@ -140,12 +140,12 @@ gradTx = 0.
 gradTz = 0.035 # C/m
 
 [permeability]
-rotation1 = 53.1
-rotation2 = -53.1
+rotation1 = 53.
+rotation2 = -53.
 rotation3 = -81
 
 [sediment]
-number_of_materials=2
+number_of_materials=3
 number_of_layers=1
 
 [sediment.material0]
