--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,25 +1,25 @@
 [grid]
 worlddim=2
-LX=400.
-NX=40
+LX=350.
+NX=35
 LZ=-500.
 NZ=250
-name=gridinclined.msh
+name=gridfracture1.msh
 
 #; case [0,400]*[-600,0]
 [grid.lenz1]
-Xmin=70.
-Zmin=-380
-Xmax=330.
-Zmax=-250.
-X0=70.
-X1=330.
+Xmin=10.
+Zmin=-395
+Xmax=350.
+Zmax=-225.
+X0=15.
+X1=350.
 
 [grid.lenz2]
 Xmin=70.
-Zmin=-380
+Zmin=-390
 Xmax=330.
-Zmax=-240.
+Zmax=-225.
 X0=70.
 X1=330.
 
@@ -48,6 +48,8 @@ X1=300.
 #X0=50.
 #X1=150.
 
+[grid.ug]
+name = grid2fracture3.msh
 
 [grid.fgp]
 Xmin=0.
@@ -82,20 +84,20 @@ order = 6
 [adaptive_time_control]
 flag=true
 dt_min=1.e-6
-dt_max=5.e2 # 3.1536e9
+dt_max=2.e2 # 3.1536e9
 max_newton_steps=8
 min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test-2D-q1-500-500-9
-time_interval=5.e2 # 3153600000
+file_name=test-2D-q1-500-500-13
+time_interval=2.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
 AbsoluteLimit = 1.e-4
-Reduction = 1.e-3 # total reduction
+Reduction = 1.e-2 # total reduction
 MinLinearReduction = 1.e-6 # min. red. in linear solve
 MaxLinearIteration = 10
 LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken #  boundedNoLineSearch #  
@@ -121,7 +123,7 @@ AcceptBest = false
 
 [hydrate_phase_change]
 dissociation_rate=1.e-17
-formation_rate=1.e-17
+formation_rate=3.e-17
 
 [initial]
 Sg=0.
@@ -140,12 +142,12 @@ gradTx = 0.
 gradTz = 0.035 # C/m
 
 [permeability]
-rotation1 = 53.
-rotation2 = -53.
+rotation1 = 45
+rotation2 = -45
 rotation3 = -81
 
 [sediment]
-number_of_materials=3
+number_of_materials=2
 number_of_layers=1
 
 [sediment.material0]
