--- a/dune/Hydrate-DG/CMakeLists.txt
+++ b/dune/Hydrate-DG/CMakeLists.txt
@@ -1,7 +1,7 @@
 #install headers
 install(FILES IncludesDUNE.hh DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/Hydrate-DG)
 add_subdirectory("operators")
-add_subdirectory("BM_phasechange_0d")
+# add_subdirectory("BM_phasechange_0d")
 #add_subdirectory("FGP")
 add_subdirectory("Ex2")
 add_subdirectory("extras")
