--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -4,7 +4,7 @@ LX=350.
 NX=35
 LZ=-500.
 NZ=250
-name=gridfracture1.msh
+name=grid2fracture4.msh
 
 #; case [0,400]*[-600,0]
 [grid.lenz1]
@@ -65,7 +65,7 @@ Xright=400
 
 ; # time should be in years
 [time]
-dt_initial= 1.e1 #     3.1104e7
+dt_initial= 1.e-2 #     3.1104e7
 time_end=3.e5 # 9.4608e12 # just needed to change the time_end 
 T_end =3.e5 # 9.4608e12#3.1536e7
 
@@ -89,7 +89,7 @@ max_newton_steps=8
 min_newton_steps=4
 
 [output]
-path_name=/home/peiravim/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
+path_name=/home/peiravim/dune-2.8/Hydrate-DG/dune/Hydrate-DG/Ex2/
 file_name=test-2D-q1-500-500-13
 time_interval=2.e2 # 3153600000
 
@@ -147,7 +147,7 @@ rotation2 = -45
 rotation3 = -81
 
 [sediment]
-number_of_materials=2
+number_of_materials=3
 number_of_layers=1
 
 [sediment.material0]
