--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -4,7 +4,7 @@ LX=350.
 NX=35
 LZ=-500.
 NZ=250
-name=gridfracture1.msh
+name=grid2fracture4.msh
 
 #; case [0,400]*[-600,0]
 [grid.lenz1]
@@ -19,7 +19,7 @@ X1=350.
 Xmin=70.
 Zmin=-390
 Xmax=330.
-Zmax=-225.
+Zmax=-200.
 X0=70.
 X1=330.
 
@@ -90,7 +90,7 @@ min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test-2D-q1-500-500-13
+file_name=test-2D-q1-500-500-14
 time_interval=2.e2 # 3153600000
 
 
@@ -123,7 +123,7 @@ AcceptBest = false
 
 [hydrate_phase_change]
 dissociation_rate=1.e-17
-formation_rate=3.e-17
+formation_rate=2.e-17
 
 [initial]
 Sg=0.
@@ -147,7 +147,7 @@ rotation2 = -45
 rotation3 = -81
 
 [sediment]
-number_of_materials=2
+number_of_materials=3
 number_of_layers=1
 
 [sediment.material0]
