--- a/dune/Hydrate-DG/Ex2/inputs/sample.ini
+++ b/dune/Hydrate-DG/Ex2/inputs/sample.ini
@@ -1,19 +1,19 @@
 [grid]
 worlddim=2
-LX=350.
-NX=35
+LX=200.
+NX=120
 LZ=-500.
-NZ=250
-name=grid2fracture5.msh
+NZ=300
+name=gridfracture1.msh
 
 #; case [0,400]*[-600,0]
 [grid.lenz1]
 Xmin=10.
 Zmin=-380
-Xmax=350.
+Xmax=200.
 Zmax=-225.
 X0=15.
-X1=350.
+X1=200.
 
 [grid.lenz2]
 Xmin=70.
@@ -61,7 +61,7 @@ Zmax=-460.
 Ztop=-380.
 Zbottom=-460.
 Xleft=0.
-Xright=400
+Xright=200
 
 ; # time should be in years
 [time]
@@ -86,22 +86,22 @@ order = 6
 [adaptive_time_control]
 flag=true
 dt_min=1.e-6
-dt_max=2.e2 # 3.1536e9
+dt_max=1.e2 # 3.1536e9
 max_newton_steps=8
 min_newton_steps=4
 
 [output]
 path_name=/home/peiravim/dune-2.7/Hydrate-DG/dune/Hydrate-DG/Ex2/
-file_name=test-2D-q1-500-500-15
-time_interval=2.e2 # 3153600000
+file_name=test-2D-q1-500-500-17
+time_interval=1.e2 # 3153600000
 
 
 ; # (THEOREM 6.1, 6.2[NUMERICAL OP.]: under some assumptions if min_linear_reduction < etha_k * new_defect, at each newton step, then newton sequence converges  )
 [newton]
 AbsoluteLimit = 1.e-4
-Reduction = 1.e-4 # total reduction
-MinLinearReduction = 1.e-6 # min. red. in linear solve
-MaxLinearIteration = 10
+Reduction = 1.e-3 # total reduction
+MinLinearReduction = 1.e-7 # min. red. in linear solve
+MaxLinearIteration = 100000
 LineSearchStrategy = hackbuschReusken # noLineSearch # boundedHackbuschReusken #  boundedNoLineSearch #  
 MaxIterations = 10 
 ForceIteration = true
@@ -115,20 +115,14 @@ VerbosityLevel = 2
 MaxIterations = 10 # limit linea search iterations
 DampingFactor = 0.5
 AcceptBest = false
-; LowerBound1 = -0.e0
-; LowerBound2 = -0.e0
-; LowerBound4 = -0.e0
-; ; LowerBound5 = 0.e0
-; ; LowerBound6 = 0.e0
-; NumberOfRestraints=1
 
 
 [hydrate_phase_change]
-dissociation_rate=2.e-17
-formation_rate=3.e-17
+dissociation_rate=1.e-17
+formation_rate=1.e-17
 
 [initial]
-Sg=0.3
+Sg=0.0
 Pw=15.e6
 Sh=0.0
 YH2O=0.00051219
@@ -145,11 +139,11 @@ gradTz = 0.035 # C/m
 
 [permeability]
 rotation1 = 45
-rotation2 = -45
+rotation2 = -0
 rotation3 = -81
 
 [sediment]
-number_of_materials=3
+number_of_materials=2
 number_of_layers=1
 
 [sediment.material0]
