--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 dune/Hydrate-DG/BM_phasechange_0d/outputs/*
-# dune/Hydrate-DG/Ex1/outputs/*
+dune/Hydrate-DG/Ex1/outputs/*
 dune/Hydrate-DG/Ex2/outputs/*
 dune/Hydrate-DG/operators/postprocess2.hh
 build/*
